--- a/www/index.html
+++ b/www/index.html
@@ -6,6 +6,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta name="mobile-web-app-capable" content="yes">
 		<meta name="apple-mobile-web-app-capable" content="yes">
+		<script src="cordova.js"></script>
 		<script type="text/javascript" src="lib/phaser.min.js"></script>
 		<script type="text/javascript" src="js/gamecontroller.js"></script>
 		<script type="text/javascript" src="js/Boot.js"></script>
